--- a/style.css
+++ b/style.css
@@ -255,15 +255,14 @@ body {
 }
 
 #content {
-    width: 100%;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 #image-home {
-    width: 90%;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    width: 100%;
     height: 550px;
     object-fit: cover;
 }
@@ -320,6 +319,7 @@ body {
     }
     #content {
         top: 90px;
+        padding: 20px;
     }
     #footer {
         height: 440px;
