--- a/style3.css
+++ b/style3.css
@@ -9,7 +9,7 @@ body {
     text-align: center;
 }
 #container-header {
-    width: 450px;
+    width: 350px;
     display: flex;
     position: relative;
     text-align: left;
@@ -19,7 +19,6 @@ body {
 #image-logo {
     height: 80px;
     margin-top: 50px;
-    margin-right: 40px;
 }
 #link-home {
     width: 200px;
@@ -47,14 +46,13 @@ body {
 #link-behind {
     height: 45px;
     display: inline-block;
-    padding-left: 70px; 
 }
 #link-products {
     text-align: left;
     padding-left: 20px;
     height: 45px;
     display: inline-block;
-    width: 180px;
+    width: 160px;
 }
 .arrow {
     border: solid white;
@@ -280,6 +278,13 @@ body {
     #header {
         height: 90px;
     }
+    #container-header {
+        width: 250px;
+    }
+    #image-logo {
+        height: 40px;
+        margin-top: 20px;
+    }
     #link-home {
         margin-top: 23px;
     }
@@ -294,8 +299,5 @@ body {
     }
     .footer-colomn {
         width: 100%;
-    }
-    #footer-left {
-        margin-left: 0;
     }
   }
