--- a/style.css
+++ b/style.css
@@ -263,11 +263,7 @@ body {
     font-size: 20px;
 }
 .link-footer {
-    display: inline-block;
-    width: 100%;
-    font-weight: 100;
-    text-decoration: none;
-    color: white;
+    display: block;
 }
 
 @media only screen and (max-width: 770px) {
