--- a/style2.css
+++ b/style2.css
@@ -268,6 +268,13 @@ body {
     text-decoration: none;
     color: white;
 }
+.link-social {
+    margin: 5px;
+}
+.image-social {
+    height: 25px;
+    width: 25px;
+}
 
 @media only screen and (max-width: 770px) {
     #menu {
