--- a/style3.css
+++ b/style3.css
@@ -261,11 +261,24 @@ body {
     font-size: 20px;
 }
 .link-footer {
-    display: inline-block;
+    display: block;
+}
+.link-social {
+    display: flex;
     width: 100%;
     font-weight: 100;
     text-decoration: none;
     color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.text-social {
+    padding-top: 3px;
+    padding-left: 3px;
+}
+.image-social {
+    height: 25px;
+    width: 25px;
 }
 
 @media only screen and (max-width: 770px) {
