--- a/style4.css
+++ b/style4.css
@@ -9,7 +9,7 @@ body {
     text-align: center;
 }
 #container-header {
-    width: 450px;
+    width: 350px;
     display: flex;
     position: relative;
     text-align: left;
@@ -17,36 +17,31 @@ body {
     margin-right: auto;
 }
 #image-logo {
-    height: 80px;
-    margin-top: 50px;
-    margin-right: 40px;
+    height: 60px;
 }
 #link-home {
-    width: 200px;
-    margin-top: 38px;
+    width: 100px;
+    margin-top: 25px;
     display: inline-block;
-    height: 50px;
-    width: 200px;
+    height: 60px;
 }
 .link {
     text-decoration: none;
     color: white;
 }
-#name-home {
-    font-weight: 100;
-    margin: 0px;
-    font-size: 35px;
-}
 #menu {
-    margin-top: 15px;
+    margin-top: 10px;
     height: 45px;
     position: relative;
-    font-size: 14px;
+    font-size: 15px;
     padding-top: 10px;
 }
 #link-behind {
     height: 45px;
     display: inline-block;
+    padding-left: 30px;
+    margin-left: 40px;
+    font-weight: 600;
 }
 #link-products {
     text-align: left;
@@ -223,8 +218,9 @@ body {
     text-align: center;
 }
 #content {
-    margin-left: 90px;
-    margin-right: 90px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 900px;
     padding-top: 30px;
     padding-bottom: 30px;
 }
@@ -244,7 +240,9 @@ body {
 }
 #image-logo-footer {
     height: 90px;
-    margin-top: 10px;
+    margin: 10px;
+    margin-top: 30px;
+    margin-left: 40px;
 }
 .footer-colomn {
     width: 33%;
@@ -262,21 +260,34 @@ body {
     font-size: 20px;
 }
 .link-footer {
-    display: inline-block;
+    display: block;
+}
+.link-social {
+    display: flex;
     width: 100%;
     font-weight: 100;
     text-decoration: none;
     color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
-.link-social {
-    margin: 5px;
+.text-social {
+    padding-top: 3px;
+    padding-left: 9px;
 }
 .image-social {
     height: 25px;
     width: 25px;
 }
 
-@media only screen and (max-width: 770px) {
+@media only screen and (max-width: 1000px) {
+    #content {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+}
+
+@media only screen and (max-width: 820px) {
     #menu {
         display: none;
     }
@@ -292,22 +303,30 @@ body {
     #image-logo {
         height: 40px;
         margin-top: 20px;
-        margin-right: 10px;
     }
     #link-home {
-        margin-top: 23px;
-    }
-    #content {
-        top: 90px;
-        padding: 0;
-        margin: 25px;
+        margin-top: 7px;
     }
     #footer {
         flex-direction: column;
         height: 600px;
         text-align: center;
     }
+    #image-logo-footer {
+        margin: 10px;
+    }
     .footer-colomn {
         width: 100%;
     }
+    .link-social {
+        margin-left: auto;
+        margin-right: auto;
+        width: 120px;
+    }
   }
+@media only screen and (max-width: 500px) {
+    #content {
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+}
