--- a/style-product.css
+++ b/style-product.css
@@ -86,8 +86,21 @@
     padding: 10px;
     padding-left: 30px;
 }
-
 @media only screen and (max-width: 900px) {
+    .info-title {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .info-subtitle {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .info-text {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+@media only screen and (max-width: 820px) {
     .container-product-small {
         flex-direction: column;
     }
