--- a/style3.css
+++ b/style3.css
@@ -307,7 +307,8 @@ body {
         margin: 25px;
     }
     #footer {
-        height: 440px;
+        flex-direction: column;
+        height: 600px;
         text-align: center;
     }
     .footer-colomn {
