--- a/style4.css
+++ b/style4.css
@@ -1,10 +1,10 @@
 body {
     margin: 0px;
     font-family: 'PT Sans';
+    background-color: #212121;
 }
 #header {
     height: 158px;
-    background-color: #212121;
     width: 100%;
     text-align: center;
 }
@@ -217,6 +217,10 @@ body {
     display: block;
     text-align: center;
 }
+#container-content{
+    width: 100%;
+    background-color: white;
+}
 #content {
     margin-left: auto;
     margin-right: auto;
@@ -232,7 +236,6 @@ body {
 #footer {
     display: flex;
     flex-direction: row;
-    background-color: #212121;
     height: 250px;
     padding-left: 90px;
     padding-right: 90px;
