--- a/style5.css
+++ b/style5.css
@@ -1,12 +1,23 @@
 body {
     margin: 0px;
     font-family: 'PT Sans';
-    background-color: #212121;
+    background-color:white;
+}
+#preheader1 {
+    width: 100%;
+    height: 40px;
+    background-color: #f5f5f5;
+}
+#preheader {
+    width: 100%;
+    height: 40px;
+    background-color: #f5f5f5;
 }
 #header {
-    height: 158px;
+    height: 80px;
     width: 100%;
-    text-align: center;
+    background-color: #212121;
+    text-align: center; 
 }
 #container-header {
     width: 350px;
@@ -17,30 +28,29 @@ body {
     margin-right: auto;
 }
 #image-logo {
-    height: 60px;
+    height: 40px;
 }
 #link-home {
-    width: 100px;
-    margin-top: 25px;
-    display: inline-block;
-    height: 60px;
+    position: absolute;
+    left: 70px;
+    top: 20px;
 }
 .link {
     text-decoration: none;
     color: white;
 }
 #menu {
-    margin-top: 10px;
     height: 45px;
     position: relative;
     font-size: 15px;
-    padding-top: 10px;
+    padding-top: 30px;
 }
 #link-behind {
     height: 45px;
     display: inline-block;
     padding-left: 30px;
     margin-left: 40px;
+    font-weight: 600;
 }
 #link-products {
     text-align: left;
@@ -103,7 +113,7 @@ body {
     display: none;
     position: absolute;
     top: 23px;
-    left: 20px;
+    right: 20px;
     padding: 10px;
 }
 .menuitembar {
@@ -239,6 +249,7 @@ body {
     padding-left: 90px;
     padding-right: 90px;
     color: white;
+    background-color: #212121;
 }
 #image-logo-footer {
     height: 90px;
@@ -290,24 +301,28 @@ body {
 }
 
 @media only screen and (max-width: 820px) {
+    #preheader1 {
+        display: none;
+    }
     #menu {
         display: none;
     }
     #menuitem {
         display: block;
+        top: 10px;
     }
     #header {
-        height: 90px;
+        height: 70px;
     }
     #container-header {
         width: 250px;
     }
     #image-logo {
         height: 40px;
-        margin-top: 20px;
     }
     #link-home {
-        margin-top: 7px;
+        top: 15px;
+        left: 20px;
     }
     #footer {
         flex-direction: column;
