--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
     margin: 0px;
     font-family: 'PT Sans';
+    background-color: #212121;
 }
 #header {
     height: 158px;
-    background-color: #212121;
     width: 100%;
     text-align: center;
 }
 #container-header {
-    width: 450px;
+    width: 350px;
     display: flex;
     position: relative;
     text-align: left;
@@ -17,44 +17,37 @@ body {
     margin-right: auto;
 }
 #image-logo {
-    height: 80px;
-    margin-top: 50px;
-    margin-right: 40px;
+    height: 60px;
 }
 #link-home {
-    width: 200px;
-    margin-top: 38px;
+    width: 100px;
+    margin-top: 25px;
     display: inline-block;
-    height: 50px;
-    width: 200px;
+    height: 60px;
 }
 .link {
     text-decoration: none;
     color: white;
 }
-#name-home {
-    font-weight: 100;
-    margin: 0px;
-    font-size: 35px;
-}
 #menu {
-    margin-top: 15px;
+    margin-top: 10px;
     height: 45px;
     position: relative;
-    font-size: 14px;
+    font-size: 15px;
     padding-top: 10px;
 }
 #link-behind {
     height: 45px;
     display: inline-block;
-    padding-left: 70px; 
+    padding-left: 30px;
+    margin-left: 40px;
 }
 #link-products {
     text-align: left;
     padding-left: 20px;
     height: 45px;
     display: inline-block;
-    width: 180px;
+    width: 160px;
 }
 .arrow {
     border: solid white;
@@ -223,9 +216,14 @@ body {
     display: block;
     text-align: center;
 }
+#container-content{
+    width: 100%;
+    background-color: white;
+}
 #content {
-    margin-left: 90px;
-    margin-right: 90px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 900px;
     padding-top: 30px;
     padding-bottom: 30px;
 }
@@ -234,22 +232,30 @@ body {
     height: 550px;
     object-fit: cover;
 }
+#footer-container {
+    width: 100%;
+    background-color: #212121;
+    height: 250px;
+}
 #footer {
     display: flex;
     flex-direction: row;
-    background-color: #212121;
     height: 250px;
-    padding-left: 90px;
-    padding-right: 90px;
     color: white;
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
 }
 #image-logo-footer {
     height: 90px;
-    margin-top: 10px;
+    margin: 10px;
+    margin-top: 30px;
+    margin-left: 40px;
 }
 .footer-colomn {
     width: 33%;
     padding: 10px;
+    padding-left: 40px;
 }
 .footer-title {
     padding-top: 30px;
@@ -265,8 +271,36 @@ body {
 .link-footer {
     display: block;
 }
+.link-social {
+    display: flex;
+    width: 100%;
+    font-weight: 100;
+    text-decoration: none;
+    color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.text-social {
+    padding-top: 3px;
+    padding-left: 9px;
+}
+.image-social {
+    height: 25px;
+    width: 25px;
+}
 
-@media only screen and (max-width: 770px) {
+@media only screen and (max-width: 1000px) {
+    #content {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+    #footer {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+}
+
+@media only screen and (max-width: 820px) {
     #menu {
         display: none;
     }
@@ -276,20 +310,40 @@ body {
     #header {
         height: 90px;
     }
-    #link-home {
-        margin-top: 23px;
+    #container-header {
+        width: 250px;
     }
-    #content {
-        top: 90px;
-        padding: 0;
-        margin: 25px;
+    #image-logo {
+        height: 40px;
+        margin-top: 20px;
+    }
+    #link-home {
+        margin-top: 7px;
     }
     #footer {
-        height: 440px;
-        text-align: center;
         flex-direction: column;
+        height: 600px;
+        text-align: center;
+    }
+    #image-logo-footer {
+        margin: 10px;
     }
     .footer-colomn {
         width: 100%;
     }
+    .link-social {
+        margin-left: auto;
+        margin-right: auto;
+        width: 120px;
+    }
   }
+@media only screen and (max-width: 500px) {
+    #content {
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+    #footer {
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+}
