--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ body {
     max-width: 900px;
     padding-top: 30px;
     padding-bottom: 30px;
+    position: relative;
 }
 #image-home {
     width: 100%;
@@ -288,6 +289,14 @@ body {
     height: 25px;
     width: 25px;
 }
+#slogan {
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
+    font-weight: 3000;
+    font-size: 90px;
+    color: white;
+}
 
 @media only screen and (max-width: 1000px) {
     #content {
@@ -330,11 +339,17 @@ body {
     }
     .footer-colomn {
         width: 100%;
+        padding: 10px;
     }
     .link-social {
         margin-left: auto;
         margin-right: auto;
         width: 120px;
+    }
+    #slogan {
+        right: 25px;
+        width: 220px;
+        font-size: 70px;
     }
   }
 @media only screen and (max-width: 500px) {
