--- a/style-product.css
+++ b/style-product.css
@@ -44,8 +44,9 @@
     padding-top: 0;
 }
 .info-container {
-    position: absolute;
-    top: 0;
+    float: left;
+    padding-top: 100%;
+    width: 0;
 }
 .info-title {
     font-size: 17px;
@@ -120,7 +121,6 @@
     .product-info {
         width: 100%;
         order: 2;
-        padding-top: 100%;
     }
     .product-info-amazon {
         padding-top: 0;
