--- a/contenance.css
+++ b/contenance.css
@@ -29,3 +29,9 @@
 #parallax4  {
     background-image: url("./media/elefant5.jpg");
 }
+
+@media only screen and (max-width: 820px) {
+    .parallax {
+      background-attachment: scroll;
+    }
+  }
