--- a/stylenew.css
+++ b/stylenew.css
@@ -305,6 +305,7 @@ body {
     #content {
         margin-left: 0px;
         margin-right: 0px;
+        padding-bottom: 0px;
     }
     #footer {
         margin-left: 50px;
