--- a/contenance.css
+++ b/contenance.css
@@ -14,17 +14,17 @@
     color: white;
 }
 .parallax-text {
-    padding: 50px;
+    padding: 100px;
     font-size: 25px;
 }
 #parallax1  {
     background-image: url("./media/elefant2.jpg");
 }
 #parallax2  {
-    background-image: url("./media/elefant3.jpg");
+    background-image: url("./media/elefant4.jpg");
 }
 #parallax3  {
-    background-image: url("./media/elefant4.jpg");
+    background-image: url("./media/elefant3.jpg");
 }
 #parallax4  {
     background-image: url("./media/elefant5.jpg");
@@ -33,5 +33,8 @@
 @media only screen and (max-width: 820px) {
     .parallax {
       background-attachment: scroll;
+    }
+    .parallax-text {
+        padding: 50px;
     }
   }
