--- a/style-product-new.css
+++ b/style-product-new.css
@@ -21,6 +21,8 @@
 }
 .image-product {
     width: 100%;
+    border-style: solid;
+    border-color: #212121;
 }
 .image-product-small {
     width: 45%;
@@ -32,6 +34,8 @@
 .product-info {
     background-color: #212121;
     width: 45%;
+    position: relative;
+    border-color: #212121;
     position: relative;
 }
 .product-info-right {
@@ -125,11 +129,15 @@
     .image-product-small-right {
         width: 100%;
     }
+    .image-product {
+        border: none;
+    }
     .product-info {
         width: 100%;
         order: 2;
         padding-top: 20px;
         padding-bottom: 20px;
+        border: none;
     }
     .buy-amazon {
         padding-left: 15px;
