--- a/stylenew.css
+++ b/stylenew.css
@@ -303,8 +303,8 @@ body {
 
 @media only screen and (max-width: 1000px) {
     #content {
-        margin-left: 0px;
-        margin-right: 0px;
+        margin-left: 50px;
+        margin-right: 50px;
     }
     #footer {
         margin-left: 50px;
@@ -313,6 +313,10 @@ body {
 }
 
 @media only screen and (max-width: 820px) {
+    #content {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
     #menu {
         display: none;
     }
