--- a/contenance.css
+++ b/contenance.css
@@ -1,7 +1,10 @@
+.container-contenance {
+    width: 100%;
+}
 .parallax {
     /* Set a specific height */
     height: 500px;
-  
+    width: 100%;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
@@ -14,9 +17,11 @@
     color: white;
 }
 .parallax-text {
-    padding: 90px;
-    padding-left: 300px;
-    padding-right: 300px;
+    padding-top: 90px;
+    padding-bottom: 90px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 900px;
     font-size: 25px;
 }
 #parallax1  {
@@ -31,12 +36,18 @@
 #parallax4  {
     background-image: url("./media/elefant5.jpg");
 }
+@media only screen and (max-width: 820px) {
+    .parallax-text {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+}
 
 @media only screen and (max-width: 820px) {
     .parallax {
       background-attachment: scroll;
     }
     .parallax-text {
-        padding: 50px;
+        padding: 25px;
     }
   }
