--- a/stylenew.css
+++ b/stylenew.css
@@ -316,6 +316,7 @@ body {
     #content {
         margin-left: 0px;
         margin-right: 0px;
+        padding-bottom: 0px;
     }
     #menu {
         display: none;
