--- a/firstupload/stylefirst.css
+++ b/firstupload/stylefirst.css
@@ -1,3 +1,9 @@
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
 #image-home {
     width: 100%;
     height: 100%;
