--- a/style-product-new.css
+++ b/style-product-new.css
@@ -2,8 +2,6 @@
     font-size: 17px;
     color: #212121;
     font-weight: 700;
-    padding-left: 20px;
-    padding-bottom: 20px;
 }
 .container-product {
     display: flex;
@@ -20,9 +18,11 @@
     flex-direction: column;
 }
 .image-product {
-    width: 100%;
     border-style: solid;
     border-color: #212121;
+    object-fit: contain;
+    width: 100%;
+    box-sizing: border-box;
 }
 .image-product-small {
     width: 45%;
@@ -37,6 +37,7 @@
     position: relative;
     border-color: #212121;
     position: relative;
+    box-sizing: border-box;
 }
 .product-info-right {
     margin-left: auto;
@@ -44,11 +45,6 @@
 .product-info-amazon {
     width: 100%;
     padding-top: 0;
-}
-.info-container {
-    float: left;
-    padding-top: 100%;
-    width: 0;
 }
 .info-title {
     font-size: 17px;
@@ -63,6 +59,8 @@
     font-size: 16px;
     font-weight: 500;
     padding: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .info-text {
     font-size: 15px;
@@ -98,6 +96,25 @@
     text-align: center;
     width: 100%;
 }
+.bullet-head {
+    width: 100%;
+    text-align: center;
+}
+.bullet-body {
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.bullet-body-last {
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+#image-sicherheit {
+    background-color: #212121;
+    padding: 50px;
+}
 
 @media only screen and (max-width: 900px) {
     .info-title {
@@ -114,8 +131,16 @@
     }
 }
 @media only screen and (max-width: 820px) {
-    .info-container {
-        padding-top: 0;
+    #image-sicherheit {
+        padding: 20px;
+        border-style: solid;
+        border-width: 20px;
+        border-color: white;
+        border-radius: 50%;
+    }
+    .title-product {
+        padding-bottom: 20px;
+        padding-left: 20px;
     }
     .product-info-amazon {
         padding-top: 20px;
