--- a/stylenew.css
+++ b/stylenew.css
@@ -343,6 +343,7 @@ body {
         text-align: center;
         padding-left: 0;
         padding-right: 0;
+        padding-top: 30px;
     }
     #image-logo-footer {
         margin: 10px;
