--- a/style-product-new.css
+++ b/style-product-new.css
@@ -135,7 +135,8 @@
 }
 @media only screen and (max-width: 820px) {
     #image-sicherheit {
-        
+        border-style: solid;
+        border-color: white;
     }
     .title-product {
         padding-bottom: 20px;
