--- a/stylenew.css
+++ b/stylenew.css
@@ -347,10 +347,12 @@ body {
     }
     #image-logo-footer {
         margin: 10px;
+        height: 110px;
     }
     .footer-colomn {
         width: 100%;
         padding: 10px;
+        box-sizing: border-box;
     }
     .link-social {
         margin-left: auto;
