--- a/style.css
+++ b/style.css
@@ -289,6 +289,9 @@ body {
     height: 25px;
     width: 25px;
 }
+.container-full {
+    position: relative;
+}
 #slogan {
     position: absolute;
     bottom: 50px;
@@ -311,7 +314,9 @@ body {
 
 @media only screen and (max-width: 820px) {
     #content {
-        padding-bottom: 0;
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-bottom: 0px;
     }
     #menu {
         display: none;
@@ -338,13 +343,16 @@ body {
         text-align: center;
         padding-left: 0;
         padding-right: 0;
+        padding-top: 30px;
     }
     #image-logo-footer {
         margin: 10px;
+        height: 110px;
     }
     .footer-colomn {
         width: 100%;
         padding: 10px;
+        box-sizing: border-box;
     }
     .link-social {
         margin-left: auto;
@@ -359,8 +367,8 @@ body {
   }
 @media only screen and (max-width: 500px) {
     #content {
-        margin-left: 25px;
-        margin-right: 25px;
+        margin-left: 0px;
+        margin-right: 0px;
     }
     #footer {
         margin-left: 25px;
