--- a/style-product.css
+++ b/style-product.css
@@ -73,7 +73,7 @@
     margin: 20px;
     margin-left: 40px;
     padding: 0;
-    list-style-type: circle;
+    list-style-type: disc;
 }
 .link-amazon {
     font-size: 20px;
