--- a/impressum.css
+++ b/impressum.css
@@ -6,5 +6,73 @@
 }
 .emptyline {
     height: 15px;
-    width: 100%;
+    width: 100px;
+}
+.contact-row {
+    display: flex;
+    flex-direction: row;
+}
+.contact-text {
+    width: 50%;
+}
+.contact-form {
+    width: 50%;
+    padding-left: 50px;
+}
+#link-datenschutz {
+    color: black;
+}
+.input-kontakt {
+    margin-bottom: 10px;
+    padding: 10px;
+    width: 300px;
+}
+.line-input {
+    padding-bottom: 5px;
+}
+.input-kontakt-message {
+    min-height: 60px;
+    padding: 10px;
+    min-width: 300px;
+    max-width: 300px;
+}
+#kontakt-send {
+    color: white;
+    background-color: #212121;
+    padding: 15px;
+    text-align: center;
+    width: 100px;
+    margin-top: 10px;
+    border-style: solid;
+    border-color: #212121;
+    border-radius: 2px;
+}
+
+@media only screen and (max-width: 820px) {
+    #page-title-kontakt {
+        padding-left: 10px;
+    }
+    .contact-row {
+        flex-direction: column;
+    }
+    .contact-text {
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+    }
+    .contact-form {
+        width: 100%;
+        padding-left: 0;
+        padding: 10px;
+        box-sizing: border-box;
+    }
+    .input-kontakt {
+        width: 100%;
+        box-sizing: border-box;
+    }
+    .input-kontakt-message {
+        min-width: 100%;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
 }
