--- a/style.css
+++ b/style.css
@@ -228,6 +228,14 @@ body {
     padding-bottom: 30px;
     position: relative;
 }
+#content-impressum {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 900px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    position: relative;
+}
 #image-home {
     width: 100%;
     height: 550px;
@@ -306,6 +314,10 @@ body {
         margin-left: 50px;
         margin-right: 50px;
     }
+    #content-impressum {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
     #footer {
         margin-left: 50px;
         margin-right: 50px;
@@ -317,6 +329,10 @@ body {
         margin-left: 0px;
         margin-right: 0px;
         padding-bottom: 0px;
+    }
+    #content-impressum {
+        margin-left: 20px;
+        margin-right: 20px;
     }
     #menu {
         display: none;
