--- a/style-product.css
+++ b/style-product.css
@@ -98,11 +98,18 @@
 }
 .bullet-head {
     width: 100%;
-    text-align: center;
-    
+    text-align: center;  
+}
+.bullet-head-top {
+   padding-top: 20px; 
 }
 .bullet-body {
     padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.bullet-body2 {
+    padding: 8px;
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -114,9 +121,6 @@
 }
 #image-sicherheit {
     background-color: #212121;
-}
-.buy-mobile {
-    display: none;
 }
 
 @media only screen and (max-width: 900px) {
@@ -134,9 +138,6 @@
     }
 }
 @media only screen and (max-width: 820px) {
-    #image-sicherheit {
-       
-    }
     .title-product {
         padding-bottom: 20px;
         padding-left: 20px;
@@ -169,12 +170,5 @@
     .container-product {
         padding-top: 0;
         padding-bottom: 0;
-    }
-    #buy-pc {
-        display: none;
-    }
-    .buy-mobile {
-        display: block;
-        border: none;
     }
 }
